[gd_scene load_steps=3 format=3 uid="uid://3wj6vgrnhacn"]

[ext_resource type="Script" path="res://map_component.gd" id="1_kw4ms"]
[ext_resource type="AudioStream" uid="uid://c5e0avc3ewfom" path="res://assets/sound/sfx/chime2.wav" id="2_yemwr"]

[node name="map_component" type="Node2D"]
script = ExtResource("1_kw4ms")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(-10, -10)
polygon = PackedVector2Array(2, 2, 18, 2, 19, 20, 3, 21)

[node name="Chime2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_yemwr")
volume_db = 3.782
bus = &"Sfx"

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
